# Telegram-Drive

./: .gitignore  CHANGELOG.md  Error.html  Fixes_Report.md  Folder_Sync_Report.md  Logout_Feature_Report.md  Preview_Improvement_Report.md  ProjectBrief.md  README.md  component_tree.md  implementation_plan.md  rust_structs.rs  schema.sql  setup_project.sh  v0.2.0_Implementation_Plan.md  v0.2.0_Implementation_Report.md
.github/workflows/: main.yml
app/: LatestError.html  package-lock.json  package.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bandwidth.rs  commands.rs  lib.rs  server.rs
app/src-tauri/src/commands/: auth.rs  fs.rs  mod.rs  preview.rs
app/src/components/: AuthWizard.tsx  Dashboard.tsx  FileTypeIcon.tsx
app/src/components/dashboard/: DragDropOverlay.tsx  EmptyState.tsx  ExternalDropBlocker.tsx  FileCard.tsx  FileExplorer.tsx  Sidebar.tsx  SidebarItem.tsx
app/src/hooks/: useFileDownload.ts  useFileOperations.ts  useFileUpload.ts  useTelegramConnection.ts  useUpdateCheck.ts
